--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Food, LLC</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li style>
+                        <a href="#">
+                            Chicken</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Beef</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Sushi</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <br>
+    <br>
+    <h1>
+        <p class="text-center">Our Menu</p>
+    </h1>
+
+
+    <div id="main-content" class="container">
+        <div id="home-tiles" class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+
+                <p id="chickstory">
+                <h2>Chicken</h2>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, sint. Deleniti distinctio exercitationem quis corporis quia impedit laboriosam enim et in facilis sit, nulla qui. Error magnam vitae, accusantium ab voluptatum tempora inventore soluta reprehenderit, quo enim ducimus cupiditate maiores facilis temporibus. Excepturi totam quisquam suscipit! Odit quia error autem sunt numquam provident ducimus! Ducimus pariatur sint quidem, nulla doloremque, labore reiciendis tempora quos recusandae velit qui? Labore repellendus, consectetur iusto fugiat accusamus soluta quod asperiores pariatur voluptatibus vitae omnis in sapiente. Eius illum consequatur impedit praesentium vitae hic, veniam, modi amet magnam aut sit necessitatibus eum dolorem vero expedita asperiores et itaque, obcaecati maxime corporis! Iusto ex hic quibusdam eaque? Doloribus sequi aperiam reiciendis aliquid quam? Corporis animi obcaecati quae ducimus. Nostrum qui sint recusandae eos corrupti. Iusto ipsum nobis modi nemo asperiores ducimus architecto voluptatum provident repudiandae eaque quod ullam exercitationem magnam, nihil quo reprehenderit nisi ab, debitis quasi error ut suscipit non esse! Fuga suscipit harum sunt id omnis? Magni, aut explicabo reprehenderit necessitatibus dolore laboriosam. Libero natus, id omnis placeat quod quo dolor corporis nesciunt? Totam ullam deserunt nobis, dolor officiis laboriosam, commodi ea necessitatibus sunt earum neque provident eaque aperiam dolore. Veritatis quia officia voluptatum temporibus laborum adipisci vero eligendi possimus, harum sequi ab unde nihil, delectus sapiente numquam libero, quas odio consectetur aliquam expedita totam. Eveniet molestias quaerat libero vero amet error aperiam ad incidunt corrupti a provident porro, cum perferendis officiis voluptas? Eligendi, laudantium error? Possimus voluptatem atque assumenda dignissimos excepturi reiciendis eum nisi! Nam architecto commodi temporibus culpa corporis consequatur sed illo, vitae error, amet suscipit. Voluptatum modi quae a ullam provident ab iusto error maiores quis! Cumque laborum natus sequi animi saepe, consequatur dignissimos, tempore eius quam vero voluptatibus eaque error nihil! Saepe magni rem atque eos facere illo, soluta ab quia delectus nihil a aspernatur exercitationem laboriosam, sit ullam dolore iste sint, ex deleniti aliquam vitae commodi sed asperiores quos. Officia, doloribus doloremque! Omnis, at quod quisquam earum molestiae rerum aperiam eligendi? Perspiciatis autem numquam sit quos provident fugit suscipit, iusto repudiandae alias aliquam obcaecati reiciendis praesentium repellendus impedit distinctio architecto eaque quo! Hic, rerum earum. Eveniet error alias eaque sequi eum accusantium unde incidunt omnis, minus, optio aut in quaerat dolorem tempora architecto. Eius impedit numquam dolorem ad error officia sed provident nesciunt voluptatum cupiditate animi, laborum dolores recusandae? Sapiente, aperiam ipsum magnam iste reiciendis ducimus suscipit facere optio molestias unde quibusdam dolore consectetur sint perferendis nisi consequuntur vitae quam nesciunt provident a commodi! Deleniti placeat, excepturi sequi dolores debitis iste soluta ipsum in, eligendi sed tempore optio et. Vitae molestias voluptate quas, quae officiis blanditiis soluta minus cumque, officia voluptates aperiam cupiditate voluptatibus unde ullam reiciendis eius tempora aliquid inventore. In odio exercitationem fuga nisi repudiandae vel autem amet dignissimos vero ex ea consequuntur optio nihil quo magnam culpa error a deleniti quae eos fugit, iste magni. Consequuntur id tempora ad quae deleniti error molestiae assumenda sequi provident debitis incidunt beatae eligendi, animi eos quaerat temporibus quisquam nesciunt?
+                </p>
+            </div>
+        </div>
+    </div>
+
+</body>
+
+</html>
